# ShieldX-Auto-DPO

./: .env.example  .gitignore  Dockerfile  LICENSE  README.md  SUBMISSION_CHECKLIST.md  ai_reviewer.py  app.py  demo_scoring.py  flywheel_store.json  github_fetcher.py  gradio_ui.py  inference.py  openenv.yaml  pyproject.toml  requirements.txt  synthetic_dataset.json  test.sh  test_ai_reviewer_direct.py  test_apis_local.py  test_env.py  validate.sh  verify_rewards.py  verify_rewards_diverse.py
.github/workflows/: huggingface_sync.yml
env/: environment.py
rl/: __init__.py  evaluate_qlearning.py  evaluate_sb3.py  qlearning_utils.py  shieldx_gym_env.py  train_qlearning.py  train_sb3.py
scripts/: generate_synthetic_cases.py  train_dpo.py
server/: ai_reviewer.py  app.py  confidence_engine.py  environment.py  feedback_bridge.py  flywheel_store.py  github_fetcher.py  graders.py  gradio_ui.py  models.py  requirements.txt  rl_wrapper.py  synthetic_generator.py  tasks.py
server/env/: environment.py  graders.py  models.py  tasks.py
server/static/: index.html  main.js  style.css
tests/: __init__.py  run_synthetic_evaluation.py  test_openenv_contract.py
